# BMI_Calculator

./: README.md  pyproject.toml
bmi_calculator/: calculator.py
