[tool.poetry]
name = "bmi-calculator"
version = "0.1.0"
description = ""
authors = ["scaumedes <marat.usmanov.07@gmail.com>"]
readme = "README.md"
packages = [{include = "bmi_calculator"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
